metadata/force-app/main/default/objects/QuoteLineItem/fields/AVA_SFCLOUD_Sales_Tax_Details__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD_Sales_Tax_Details__c</fullName>
    <label>Sales Tax Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>