metadata/force-app/main/default/objects/QuoteLineItem/fields/AVA_SFCLOUD_Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD_Sales_Tax_Rate__c</fullName>
    <label>Sales Tax Rate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>