metadata/force-app/main/default/objects/QuoteLineItem/fields/AVA_SFCLOUD_SalesTax_Line__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD_SalesTax_Line__c</fullName>
    <label>Sales Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>