metadata/force-app/main/default/objects/QuoteLineItem/fields/AVA_SFCLOUD_Tax_Override__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD_Tax_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Override</label>
    <type>Checkbox</type>
</CustomField>