metadata/force-app/main/default/objects/QuoteLineItem/fields/Conga_Amendment_Check__c.field-meta.xml
<CustomField>
    <fullName>Conga_Amendment_Check__c</fullName>
    <description>Created this field to check if the QLI is an Amendment item.</description>
    <formula>OR(
AND(
ISBLANK(Renewal_OLI_ID__c),
ISBLANK(Upsell_OLI_ID__c),
For_Renewal__c = TRUE                     /*New products added from Pricebook*/
),
AND(
NOT(ISBLANK(Renewal_OLI_ID__c)),
ISBLANK(Upsell_OLI_ID__c),
For_Renewal__c = TRUE,
Quantity &lt;&gt; Renewal_OLI_ID__r.Quantity    /*Product quantity increased/decreased on Quote line items*/
),
AND(
ISBLANK(Renewal_OLI_ID__c),
NOT(ISBLANK(Upsell_OLI_ID__c)),
For_Renewal__c = TRUE                     /*New product added to upsell got merged to the Quote*/
),
AND(
NOT(ISBLANK(Renewal_OLI_ID__c)),
NOT(ISBLANK(Upsell_OLI_ID__c)),           /*Renewal Product quantity increased/decreased on Quote through as upsell*/
For_Renewal__c = TRUE,
Quantity &lt;&gt; Renewal_OLI_ID__r.Quantity
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Amendment Check</label>
    <type>Checkbox</type>
</CustomField>