metadata/force-app/main/default/objects/QuoteLineItem/fields/Conga_Amendment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Conga_Amendment_Fee__c</fullName>
    <description>Created this field to calculate the Amendment Fee</description>
    <formula>Conga_Amendment_Quantity__c *  Sales_Price_ARR_One_off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Amendment Fee</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>