metadata/force-app/main/default/objects/QuoteLineItem/fields/Conga_Amendment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Conga_Amendment_Quantity__c</fullName>
    <description>Created this field to return the Amendment Quantity</description>
    <formula>IF (
AND(
ISBLANK(Renewal_OLI_ID__c),
ISBLANK(Upsell_OLI_ID__c),
For_Renewal__c = TRUE), Quantity,  /*New products added from Pricebook*/

IF(
AND(
ISBLANK(Renewal_OLI_ID__c),
NOT(ISBLANK(Upsell_OLI_ID__c)),
For_Renewal__c = TRUE),Quantity, /*New product added to upsell got merged to the Quote*/

IF(
AND(
NOT(ISBLANK(Renewal_OLI_ID__c)),
NOT(ISBLANK(Upsell_OLI_ID__c)),
For_Renewal__c = TRUE,
Quantity &lt;&gt; Renewal_OLI_ID__r.Quantity),
Quantity - Renewal_OLI_ID__r.Quantity, /*Renewal Product quantity increased/decreased on Quote through as upsell*/


IF (
AND(
NOT(ISBLANK(Renewal_OLI_ID__c)),  /*Product quantity increased/decreased on Quote line items*/
ISBLANK(Upsell_OLI_ID__c),
For_Renewal__c = TRUE,
Quantity &lt;&gt; Renewal_OLI_ID__r.Quantity
), Quantity - Renewal_OLI_ID__r.Quantity,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Amendment Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>