metadata/force-app/main/default/objects/QuoteLineItem/fields/Cumulative_Indexation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Indexation_Amount__c</fullName>
    <formula>IF( Pricing_Factors_to_be_Applied__c &amp;&amp;  NOT(ISNULL(Quote.Applied_Cumulative_Indexation__c)),
 Total_Initial_Default_Price_ARR_One_off__c * Quote.Applied_Cumulative_Indexation__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Indexation Amount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>