metadata/force-app/main/default/objects/QuoteLineItem/fields/Discount_percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_percentage__c</fullName>
    <description>Calculates the discount % on the product in the quote</description>
    <formula>IF( Default_Price_ARR_One_off__c = 0,
0,
IF( Sales_Price_ARR_One_off__c &gt; Default_Price_ARR_One_off__c, 0,
( Default_Price_ARR_One_off__c - Sales_Price_ARR_One_off__c) / Default_Price_ARR_One_off__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>