metadata/force-app/main/default/objects/QuoteLineItem/fields/For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>For_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-3370 : Indicate whether the product is recurring or one-off.
Map Product2Id &gt; For Contract Renewal on creation. Has to be a manual field for roll-up summary fields.</description>
    <label>For Renewal</label>
    <type>Checkbox</type>
</CustomField>