metadata/force-app/main/default/objects/QuoteLineItem/fields/Number_of_STT_Minutes_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Number_of_STT_Minutes_Mapped__c</fullName>
    <label>Number of STT Minutes Mapped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>