metadata/force-app/main/default/objects/QuoteLineItem/fields/Parent_Solution__c.field-meta.xml
<CustomField>
    <fullName>Parent_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Solution</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>