metadata/force-app/main/default/objects/QuoteLineItem/fields/Parent_Solution_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Solution_Product_ID__c</fullName>
    <formula>Parent_Solution_Product__r.Id</formula>
    <label>Parent Solution Product ID</label>
    <type>Text</type>
</CustomField>