metadata/force-app/main/default/objects/QuoteLineItem/fields/Part_of_Min_Commit__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Min_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-3370 : Indicate whether the product is a part of Minimum Commitment or not.
Map this field from inherited Renewal/Upsell/Downsell on creation, but can be edited.</description>
    <label>Part of Min Commit?</label>
    <type>Checkbox</type>
</CustomField>