metadata/force-app/main/default/objects/QuoteLineItem/fields/Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Price_Change__c</fullName>
    <description>Show price increase or discount against Default Price by %.
In case of increase, &quot;&quot;+ X%&quot;&quot;, in case of discount, &quot;&quot;- X%&quot;&quot;, and in case of no gap, &quot;&quot;0%&quot;&quot;</description>
    <formula>IF(Discount_percentage__c&gt;0, &quot;-&quot;&amp;TEXT(ROUND(Discount_percentage__c*100, 3)) &amp; &quot;%&quot;,
IF( Default_Price_ARR_One_off__c = 0, &quot;0%&quot;,
IF( Sales_Price_ARR_One_off__c &gt; Default_Price_ARR_One_off__c,
&quot;+&quot;&amp;TEXT(ABS(ROUND(((Default_Price_ARR_One_off__c - Sales_Price_ARR_One_off__c) / Default_Price_ARR_One_off__c) * 100, 3)))&amp;&quot;%&quot;,
&quot;0%&quot;)))</formula>
    <label>Price Change</label>
    <type>Text</type>
</CustomField>