metadata/force-app/main/default/objects/QuoteLineItem/fields/Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase__c</fullName>
    <description>Created this field to track the price increase against the pricing factors &amp; add it to the Sub-Total Table that gets displayed on the Agreement</description>
    <formula>IF(Pricing_Factors_to_be_Applied__c,  (Total_Sales_Price_ARR_One_off__c - ( Total_Initial_Default_Price_ARR_One_off__c +  Cumulative_Indexation_Amount__c) -  Upcoming_Indexation_Amount__c -  Renewal_Uplift_Amount__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Increase</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>