metadata/force-app/main/default/objects/QuoteLineItem/fields/Pricing_Availability__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Availability__c</fullName>
    <description>BODEV-4533 Created this field to track Pricing Availability for QLIs</description>
    <formula>TEXT(PricebookEntry.Product2.Pricing_Availability__c)</formula>
    <label>Pricing Availability</label>
    <type>Text</type>
</CustomField>