metadata/force-app/main/default/objects/QuoteLineItem/fields/Pricing_Factors_to_be_Applied__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Factors_to_be_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether pricing factors should be applied to this item.</description>
    <label>Pricing Factors to be Applied?</label>
    <type>Checkbox</type>
</CustomField>