metadata/force-app/main/default/objects/QuoteLineItem/fields/Recurring_Discount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Discount__c</fullName>
    <description>BODEV-3370 : Indicate whether the given discount will be continued to the next contract or not.
This field is required when Default Price ARR/One-off &gt; Sales Price ARR/One-off</description>
    <label>Recurring Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>