metadata/force-app/main/default/objects/QuoteLineItem/fields/Renewal_OLI_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewal_OLI_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-3370 : Used to store the OLI of the renewal associated with QLI</description>
    <label>Renewal OLI ID</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>