metadata/force-app/main/default/objects/QuoteLineItem/fields/Renewal_Uplift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift_Amount__c</fullName>
    <formula>IF( Pricing_Factors_to_be_Applied__c  &amp;&amp;  NOT(ISNULL(Quote.Price_Uplift_on_Renewal_percentage__c)),
(Total_Initial_Default_Price_ARR_One_off__c + Cumulative_Indexation_Amount__c + Upcoming_Indexation_Amount__c) * Quote.Price_Uplift_on_Renewal_percentage__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Uplift Amount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>