metadata/force-app/main/default/objects/QuoteLineItem/fields/Sales_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_ARR_One_off__c</fullName>
    <label>Sales Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>