metadata/force-app/main/default/objects/QuoteLineItem/fields/SpotDraft_Product_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>SpotDraft_Product_Sort_Order__c</fullName>
    <description>Created this field for sorting QLI on the template</description>
    <formula>IF( ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &apos;Users &amp; Storage&apos;),1,
IF( ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &apos;Core &amp; Modules&apos;),2,
IF( ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &apos;Integrations&apos;),3,
IF( ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &apos;Success Package&apos;),4,
IF( ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &apos;Contract&apos;),5,
IF( ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &apos;Standalone&apos;),6,
IF( ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &apos;Professional Service&apos;),7,
IF( ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &apos;Add-ons&apos;),8,9))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft Product Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>