metadata/force-app/main/default/objects/QuoteLineItem/fields/Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee__c</fullName>
    <description>Created this field for Conga Renewal Agreement purposes &amp; updated the data type to Number to avoid numbers displaying in Corporate Currency.</description>
    <formula>IF(
 	(ISBLANK( Renewal_OLI_ID__c ) &amp;&amp; ISBLANK( Upsell_OLI_ID__c ) &amp;&amp;  For_Renewal__c  = TRUE) || 
 	(ISBLANK( Renewal_OLI_ID__c ) &amp;&amp;  NOT(ISBLANK( Upsell_OLI_ID__c )) &amp;&amp;  For_Renewal__c  = TRUE), 
 	MAX( Total_Default_Price_ARR_One_off__c ,  Total_Sales_Price_ARR_One_off__c ), 
 	Total_Initial_Default_Price_ARR_One_off__c +  Cumulative_Indexation_Amount__c
 	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Fee</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>