metadata/force-app/main/default/objects/QuoteLineItem/fields/Swap_Item__c.field-meta.xml
<CustomField>
    <fullName>Swap_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Swap Item?</label>
    <type>Checkbox</type>
</CustomField>