metadata/force-app/main/default/objects/QuoteLineItem/fields/Total_Price_Before_Discount_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Before_Discount_Mapped__c</fullName>
    <description>Map Total Price Before Discount to this manual entry field in order to use this for roll-up summary field.</description>
    <label>Total Price Before Discount Mapped</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>