metadata/force-app/main/default/objects/QuoteLineItem/fields/Total_Sales_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price_ARR_One_off__c</fullName>
    <formula>Sales_Price_ARR_One_off__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>