metadata/force-app/main/default/objects/QuoteLineItem/fields/Total_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Subscription_Fee__c</fullName>
    <description>Created this field to calculate Sub-Total with Price Increase</description>
    <formula>Subscription_Fee__c +  MAX(Price_Increase__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Subscription Fee</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>