metadata/force-app/main/default/objects/QuoteLineItem/fields/Upsell_OLI_ID__c.field-meta.xml
<CustomField>
    <fullName>Upsell_OLI_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-3370 : Used to store the OLI of the Upsell associated with QLI</description>
    <label>Upsell OLI ID</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Upsell Line Items</relationshipLabel>
    <relationshipName>Upsell_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>